# chief-of-staff

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  default_framework.md  lib.rs  main.rs  session_registry.rs  state.rs  todos.rs  watcher.rs
src-tauri/src/server/: mod.rs  routes.rs  types.rs
src-tauri/src/telegram/: mod.rs  types.rs
src-tauri/src/tmux/: mod.rs
src-tauri/src/vault/: markdown.rs  mod.rs
src/components/: MessageBubble.tsx  ProjectCard.tsx  QuestionCard.tsx  SessionLaunchPrompt.tsx  SessionPicker.tsx  Sidebar.tsx  StatusBar.tsx  TodayPanel.tsx  TodoPanel.tsx
src/lib/: daily.ts  defaults.ts  events.ts  poller.ts  stores.ts  tauri-bridge.ts  types.ts
src/pages/: Dashboard.tsx  Messages.tsx  Sessions.tsx  Settings.tsx  Setup.tsx
src/styles/: global.css
